--- a/PDF.html
+++ b/PDF.html
@@ -1359,7 +1359,7 @@
           <div class="file-type"><span class="file-icon">📋</span> TXT</div>
         </div>
         
-<a href="https://your-adsterra-direct-link.com" class="cta-button pulse" target="_blank" style="display: block; width: fit-content; margin: 0 auto;">Convert Now</a>
+<a href="https://singingfiles.com/show.php?l=0&u=2400853&id=68777" class="cta-button pulse" target="_blank" style="display: block; width: fit-content; margin: 0 auto;">Convert Now</a>
         
         <div class="trust-badges">
           <div class="trust-badge">
