--- a/PDF.html
+++ b/PDF.html
@@ -1897,6 +1897,7 @@
     });
   </script>
   <!-- Adsterra Popunder Ad -->
-<script type='text/javascript' src='//pl26813616.profitableratecpm.com/b4/54/6a/b4546a7dd32fc37c924cde68a68a0220.js'></script>
+<!-- Adsterra Social Bar -->
+<script type='text/javascript' src='//pl26813735.profitableratecpm.com/3a/ef/f7/3aeff7efc14ecfd26d8b10296c74a3b4.js'></script>
 </body>
 </html>
